--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "A 3D sphere sound visualiser",
   "author": "John Wong <johnwongwwc@gmail.com>",
-  "homepage": "http://https://waichungwong.github.io/soundsphere/build",
+  "homepage": "https://waichungwong.github.io/soundsphere/build",
   "dependencies": {
     "classnames": "^2.2.6",
     "jw-animator": "^0.1.3",
