--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-# dependencies
-/node_modules
+# Dependency directories
+node_modules
 
 # Built css files in development
-**/*.css
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+src/**/*.css
